@@ -359,8 +359,12 @@ doit "echo $lang > LINGUAS"
 doit cd ..
 doit make
 doit make check
-doit git add .
-doit git add -f m4/gawkext.m4
+if type -p git > /dev/null; then
+   doit git add .
+   doit git add -f m4/gawkext.m4
+else
+   echo "Warning: I cannot find the git command, so I am skipping those commands."
+fi
 
 echo "
 Congratulations!  A working sample extension has been created as a starting
